# atomic-mail-agentic

./: .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  README.md  glama.json  package-lock.json  package.json  server.json
.github/workflows/: docs.yml  docs.yml.disabled  publish-clawhub-skill.yml  publish-clawhub.yml  publish-dify-plugin.yml  publish-hermes-skill.yml  publish-n8n.yml  publish-npm.yml  publish-pypi.yml  publish-skills.yml  test-dify-plugin.yml
.vitepress/: config.ts
credentials/: AtomicMailApi.credentials.ts
docs/: SKILL.md  core.md  dify.md  examples.md  getting-started.md  index.md  jmap-using.md  jmap.md  langchain.md  mcp.md  n8n.md  rest-auth.md  skill-install.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
integrations/dify/: README.md
integrations/dify/atomicmail/: .env.example  .gitignore  PRIVACY.md  README.md  main.py  manifest.yaml  requirements.txt
integrations/dify/atomicmail/provider/: atomicmail.py  atomicmail.yaml
integrations/dify/atomicmail/scripts/: live_invoke_verify.py
integrations/dify/atomicmail/tests/: conftest.py  test_attachment_bridge.py  test_dify_kv_store.py  test_provider_validate.py  test_session_factory.py  test_tool_invoke.py
integrations/dify/atomicmail/tools/: common.py  help.py  help.yaml  jmap_request.py  jmap_request.yaml  list_inbox.py  list_inbox.yaml  register.py  register.yaml  reply.py  reply.yaml  send_mail.py  send_mail.yaml
integrations/dify/atomicmail/utils/: __init__.py  attachment_bridge.py  dify_kv_store.py  session_factory.py
integrations/n8n/: README.md  docker-compose.demo.yml
integrations/n8n/atomicmail/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
integrations/n8n/atomicmail/credentials/: AtomicMailApi.credentials.ts
integrations/n8n/atomicmail/examples/: list-and-send.workflow.json
integrations/n8n/atomicmail/lib/: attachments.ts  jmap.ts  props.ts  session.ts
integrations/n8n/atomicmail/scripts/: copy-vendor-to-dist.mjs  sync-vetting-paths.mjs
integrations/n8n/vetting/credentials/: AtomicMailApi.credentials.ts
integrations/openclaw/atomicmail/: README.md  openclaw.plugin.json  package.json
integrations/openclaw/atomicmail/src/: index.js
integrations/skill/atomicmail/: SKILL.md
py/: .gitignore  pyproject.toml
py/langchain/: README.md  pyproject.toml
py/langchain/src/langchain_atomicmail/: __init__.py  toolkit.py  tools.py
py/scripts/: bundle_shared_assets.sh  prepare_langchain_release.sh  sync_release_version.py
py/src/atomicmail/: __init__.py  config.py  credentials.py  help.py  jmap_request.py  mcp_server.py  session.py  shared_assets.py
py/tests/: conftest.py  test_api_surface.py  test_auth_http.py  test_cli_adapter.py  test_config.py  test_credentials.py  test_help.py  test_jmap_request.py  test_jwt_utils.py  test_langchain_atomicmail.py  test_mcp_adapter.py  test_pow.py  test_session_register.py
shared/help/: readme_stub.md
shared/help/fragments/: post_register_cron_reminder.md
shared/help/topics/: cron.md  installation.md  overview.md
shared/messages/: errors.json  hints.json
shared/skill/: manifest.json
test/checklists/: agent-skill-major-release.md  mcp-major-release.md  verify_unified_skill_release.sh
test/fixtures/: mcp-checklist-attachment.txt
ts/: build_all_npm.ts  build_anthropic_mcpb.ts  build_clawhub_skill.ts  build_core_npm.ts  build_dify_wrapper.ts  build_github_packages_npm.ts  build_hermes_skill.ts  build_langchain_npm.ts  build_mcp_npm.ts  build_n8n_wrapper.ts  build_openclaw_wrapper.ts  build_skill.ts  build_skill_npm.ts  clawhub_skill_build.test.ts  deno.json  generate_pow_vectors.ts  hermes_skill_build.test.ts  mcpb_anthropic_manifest.template.json  npm_channels.json  npm_package_meta.ts  publish_all_npm.ts  publish_github_packages_npm.ts  resolve_release_version.ts  skill_build.test.ts  skill_md_transform.test.ts  unified_skill_rollout.test.ts
ts/lib/: build_clawhub_skill.ts  build_hermes_skill.ts  build_npm.ts  build_skill.ts  build_skill_bundle.ts  hermes_skill_bundle.ts  hermes_skill_frontmatter.ts  skill_md_transform.ts  version.ts
ts/src/langchain/: mod.test.ts  mod.ts
ts/src/lib/: mod.ts
ts/src/lib/core/: consts.ts  jmap-hints.ts  messages.ts  read-npm-package-readme.ts  shared-assets.ts  types.ts  utils.ts
ts/src/mcp/: main.ts  mcp-result.ts  mcp-session-context.test.ts  mcp-session-context.ts  version.ts
ts/src/skill/: cli.ts
(+110 files in other folders)
