[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-atomicmail"
version = "0.1.0"
description = "LangChain tools for Atomic Mail register/help/JMAP operations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Atomic Mail"},
]
keywords = [
  "atomic-mail",
  "atomicmail",
  "langchain",
  "toolkit",
  "agent",
  "ai",
  "jmap",
  "email",
  "proof-of-work",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "langchain-core>=0.3.0,<2",
]

[project.urls]
Homepage = "https://atomicmail.ai"
Source = "https://github.com/Atomic-Mail/atomic-mail-agentic"
Documentation = "https://atomic-mail.github.io/atomic-mail-agentic/langchain"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atomicmail = ["vendor/shared/**/*"]
